--- a/DungeonCrawler/DungeonCrawler.vcxproj.filters
+++ b/DungeonCrawler/DungeonCrawler.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="src\scripts\TileMapCreator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\scripts\weapons\Crossbow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -96,6 +99,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\scripts\test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\scripts\weapons\Crossbow.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
